# Metamed_Score_Rater

./: config.py  gunicorn_conf.py  init_db.py  main.py  pyproject.toml  requirements.txt
Rag_Service/: ingestion.py  retrieval.py
Score_Rater/: config.py  rater.py  s3_service.py
data_utils/: document_parser.py  vector_db.py
database/: __init__.py  article.py  database.py  init_db.py  models.py
templates/: index.html  index_backup.html
templates/static/css/: styles.css  styles_backup.css
templates/static/js/: upload.js  upload_backup.js
utils/: file_cache.py  logger.py
